<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.numeris_ci.notifications.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="top|center">


            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/title" />

            <Button
                android:id="@+id/btnMaxPriorityNotification"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/max_priority" />

            <Button
                android:id="@+id/btnHighPriorityNotification"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/high_priority" />

            <Button
                android:id="@+id/btnLowPriorityNotification"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/low_priority" />

            <Button
                android:id="@+id/btnMinPriorityNotification"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/min_priority" />

            <Button
                android:id="@+id/btnDefaultNotification"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/default_priority" />

            <Button
                android:id="@+id/btnBigTextNotification"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/big_text" />

            <Button
                android:id="@+id/btnBigImageNotification"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/big_picture" />

            <Button
                android:id="@+id/btnInboxTypeNotification"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="@string/inbox_type" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
